--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />
             ВАШОГО БІЗНЕСУ
           </h1>
-          <button data-modal-open type="button" class="button__primary ">Замовити послугу</button>
+          <button data-modal-open type="button" class="hero__button ">Замовити послугу</button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button data-modal-close class="modal__button" type="button">
@@ -99,53 +99,53 @@
         </section>
       </div>
       <!-- Переваги -->
-      <section class="section-features">
+      <section class="features">
         <div class="container">
         <h2 class="section-title visually-hidden">Переваги</h2>
-        <ul class="feature__list">
-          <li class="feature__item">
-            <div class="feature__img" >
-              <svg class="feature__icon" width="70" height="70">
+        <ul class="features__list">
+          <li class="features__item">
+            <div class="features__img" >
+              <svg class="features__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-antenna"></use>
               </svg>
             </div>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
+            <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features__text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="feature__item">
-            <div class="feature__img" >
-              <svg class="feature__icon" width="70" height="70">
+          <li class="features__item">
+            <div class="features__img" >
+              <svg class="features__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
+            <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features__text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="feature__item">
-            <div class="feature__img" >
-              <svg class="feature__icon" width="70" height="70">
+          <li class="features__item">
+            <div class="features__img" >
+              <svg class="features__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-diagram"></use>
               </svg>
             </div>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p class="text">
+            <h3 class="features__title">ПЛАНУВАННЯ</h3>
+            <p class="features__text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="feature__item">
-            <div class="feature__img" >
-              <svg class="feature__icon" width="70" height="70">
+          <li class="features__item">
+            <div class="features__img" >
+              <svg class="features__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
+            <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features__text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -157,7 +157,7 @@
         <section class="section">
           <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="work__list">
+          <ul class="work">
             <li class="work__item">
               <div class="work__wrap">
                 <img
