--- a/index.html
+++ b/index.html
@@ -102,50 +102,50 @@
       <section class="features">
         <div class="container">
         <h2 class="section-title visually-hidden">Переваги</h2>
-        <ul class="features__list">
-          <li class="features__item">
-            <div class="features__img" >
+        <ul class="features-list">
+          <li class="features-list__item">
+            <div class="features-list__img" >
               <svg class="features__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-antenna"></use>
               </svg>
             </div>
-            <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="features__text">
+            <h3 class="features-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="features-list__text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="features__item">
-            <div class="features__img" >
-              <svg class="features__icon" width="70" height="70">
+          <li class="features-list__item">
+            <div class="features-list__img" >
+              <svg class="features-list__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-clock-1"></use>
               </svg>
             </div>
-            <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="features__text">
+            <h3 class="features-list__title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="features-list__text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="features__item">
-            <div class="features__img" >
-              <svg class="features__icon" width="70" height="70">
+          <li class="features-list__item">
+            <div class="features-list__img" >
+              <svg class="features-list__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-diagram"></use>
               </svg>
             </div>
-            <h3 class="features__title">ПЛАНУВАННЯ</h3>
-            <p class="features__text">
+            <h3 class="features-list__title">ПЛАНУВАННЯ</h3>
+            <p class="features-list__text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="features__item">
-            <div class="features__img" >
-              <svg class="features__icon" width="70" height="70">
+          <li class="features-list__item">
+            <div class="features-list__img" >
+              <svg class="features-list__icon" width="70" height="70">
                 <use href="./images/images.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3 class="features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="features__text">
+            <h3 class="features-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="features-list__text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -198,42 +198,42 @@
       <section class="team">
         <div class="container">
         <h2 class="section-title list">Наша команда</h2>
-        <ul class="team__list list">
-          <li class="team__item">
+        <ul class="team-list list">
+          <li class="team-list__item">
             <img
               src="images/team1.jpg"
               alt="Перший член команди"
               width="270"
               height="260"
             />
-            <div class="team__section">
-            <h3 class="team__title">Ігор Дем'яненко</h3>
-            <p class="team__text">Product Designer</p>
-            <ul class="team__icon">
-              <li class="team__img">
-                 <a class="team__link" href="https://www.instagram.com/" aria-label="Instagram">
-                  <svg class="team__svg" width="20" height="20">
+            <div class="team-list__section">
+            <h3 class="team-list__title">Ігор Дем'яненко</h3>
+            <p class="team-list__text">Product Designer</p>
+            <ul class="team-list__icon">
+              <li class="team-list__img">
+                 <a class="team-list__link" href="https://www.instagram.com/" aria-label="Instagram">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-instagram2"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.facebook.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.facebook.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.linkedin.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.linkedin.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
@@ -241,41 +241,41 @@
             </ul>
             </div>
           </li>
-          <li class="team__item">
+          <li class="team-list__item">
             <img
               src="images/team2.jpg"
               alt="Другий член команди"
               width="270"
               height="260"
             />
-            <div class="team__section">
-            <h3 class="team__title">Ольга Рєпіна</h3>
-            <p class="team__text">Frontend Developer</p>
-            <ul class="team__icon">
-              <li class="team__img">
-                 <a class="team__link" href="https://www.instagram.com/" aria-label="Instagram">
-                  <svg class="team__svg" width="20" height="20">
+            <div class="team-list__section">
+            <h3 class="team-list__title">Ольга Рєпіна</h3>
+            <p class="team-list__text">Frontend Developer</p>
+            <ul class="team-list__icon">
+              <li class="team-list__img">
+                 <a class="team-list__link" href="https://www.instagram.com/" aria-label="Instagram">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-instagram2"></use>
                     </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.facebook.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.facebook.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.linkedin.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.linkedin.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
@@ -283,41 +283,41 @@
             </ul>
             </div>
           </li>
-          <li class="team__item">
+          <li class="team-list__item">
             <img
               src="images/team3.jpg"
               alt="Третій член команди"
               width="270"
               height="260"
             />
-            <div class="team__section">
-             <h3 class="team__title">Микола Тарасов</h3>
-            <p class="team__text">Marketing</p>
-            <ul class="team__icon">
-              <li class="team__img">
-                 <a class="team__link" href="https://www.instagram.com/" aria-label="Instagram">
-                  <svg class="team__svg" width="20" height="20">
+            <div class="team-list__section">
+             <h3 class="team-list__title">Микола Тарасов</h3>
+            <p class="team-list__text">Marketing</p>
+            <ul class="team-list__icon">
+              <li class="team-list__img">
+                 <a class="team-list__link" href="https://www.instagram.com/" aria-label="Instagram">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-instagram2"></use>
                     </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.facebook.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.facebook.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.linkedin.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.linkedin.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
@@ -325,41 +325,41 @@
             </ul>
             </div>
           </li>
-          <li class="team__item">
+          <li class="team-list__item">
             <img 
               src="images/team4.jpg"
               alt="Четвертий член команди"
               width="270"
               height="260"
             />
-            <div class="team__section">
-              <h3 class="team__title">Михайло Єрмаков</h3>
-            <p class="team__text">UI Designer</p>
-            <ul class="team__icon">
-              <li class="team__img">
-                 <a class="team__link" href="https://www.instagram.com/" aria-label="Instagram">
-                  <svg class="team__svg" width="20" height="20">
+            <div class="team-list__section">
+              <h3 class="team-list__title">Михайло Єрмаков</h3>
+            <p class="team-list__text">UI Designer</p>
+            <ul class="team-list__icon">
+              <li class="team-list__img">
+                 <a class="team-list__link" href="https://www.instagram.com/" aria-label="Instagram">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-instagram2"></use>
                     </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://twitter.com/?lang=uk" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.facebook.com/" aria-label="Twitter">
-                  <svg class="team__svg" width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.facebook.com/" aria-label="Twitter">
+                  <svg class="team-list__svg" width="20" height="20">
                     <use href="./images/images.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="team__img">
-                <a class="team__link" href="https://www.linkedin.com/" aria-label="Twitter">
-                  <svg class="team__svg width="20" height="20">
+              <li class="team-list__img">
+                <a class="team-list__link" href="https://www.linkedin.com/" aria-label="Twitter">
+                  <svg class="team-list__svg width="20" height="20">
                     <use href="./images/images.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
