--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,19 @@
     <header class="header">
       <div class="container container-nav">
         <a href="#" class="container-nav__logo">
-          <span class="container-nav__accent">Web</span>Studio</a>
+          <span class="container-nav__accent">Web</span>Studio</a
+        >
         <nav>
           <ul class="navigation">
             <li class="navigation__item">
               <a class="navigation__link" href="./index.html">Студія</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link navigation__link--current"href="./portfolio.html">Портфоліо</a>
+              <a
+                class="navigation__link navigation__link--current"
+                href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="#">Контакти</a>
@@ -27,7 +32,11 @@
         </nav>
         <ul class="contacts list">
           <li class="contacts__item">
-            <a class="contacts__link" href="mailto:info@devstudio.com" aria-label="mail">
+            <a
+              class="contacts__link"
+              href="mailto:info@devstudio.com"
+              aria-label="mail"
+            >
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/images.svg#icon-envelope"></use>
               </svg>
@@ -51,23 +60,25 @@
           <h1 class="section-title visually-hidden">Приклади фото</h1>
           <ul class="button list">
             <li class="button__item">
-              <button class="button__type button__type--current" type="button">Усі</button>
+              <button class="button__type button__type--current" type="button">
+                Усі
+              </button>
             </li>
             <li class="button__item">
-              <button class="button__type" type="button" >Веб-сайти</button>
+              <button class="button__type" type="button">Веб-сайти</button>
             </li>
             <li class="button__item">
-              <button class="button__type" type="button" >Додатки</button>
+              <button class="button__type" type="button">Додатки</button>
             </li>
             <li class="button__item">
-              <button class="button__type" type="button" >Дизайн</button>
+              <button class="button__type" type="button">Дизайн</button>
             </li>
             <li class="button__item">
-              <button class="button__type" type="button" >Маркетинг</button>
+              <button class="button__type" type="button">Маркетинг</button>
             </li>
           </ul>
           <!-- Portfolio -->
-        <ul class="portfolio list">
+          <ul class="portfolio list">
             <li class="portfolio__item">
               <div class="portfolio__wrapper">
                 <img
@@ -186,7 +197,9 @@
                 </p>
               </div>
               <div class="potrfolio__border">
-                <h2 class="portfolio__title" lang="en">Inspiration has no Borders</h2>
+                <h2 class="portfolio__title" lang="en">
+                  Inspiration has no Borders
+                </h2>
                 <p class="portfolio__name">Веб-сайт</p>
               </div>
             </li>
@@ -206,7 +219,9 @@
                 </p>
               </div>
               <div class="potrfolio__border">
-                <h2 class="portfolio__title" lang="en">Видання Limited Edition</h2>
+                <h2 class="portfolio__title" lang="en">
+                  Видання Limited Edition
+                </h2>
                 <p class="portfolio__name">Дизайн</p>
               </div>
             </li>
@@ -246,7 +261,7 @@
                 </p>
               </div>
               <div class="potrfolio__border">
-                <h2 class="portfolio__title" lang="eng">Growing Business</h2>
+                <h2 class="portfolio__title" lang="en">Growing Business</h2>
                 <p class="portfolio__name">Додаток</p>
               </div>
             </li>
@@ -258,80 +273,110 @@
       <div class="container container-footer">
         <div class="footer-logo">
           <a href="" class="footer-logo__text">
-        <span class="footer-logo__accent">Web</span>Studio</a>
-      <address>
-        <ul class="address">
-          <li class="address__item">
-            <a class="address__map"
-              href="https://goo.gl/maps/UXHaqJRbuejxWk5PA" target="_blank" rel="noopener noreferrer"
-              >м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li class="address__item">
-            <a href="mailto:info@devstudio.com" class="address__cont"
-              >info@devstudio.com</a>
-          </li>
-          <li class="6">
-            <a href="tel:+380961111111" class="address__cont"
-              >+38(096) 111 11 11</a>
-          </li>
-          </div>
-              <div class="join">
-              <h2 class="join__title">ПРИЄДНУЙТЕСЬ</h2>
-             <ul class="join__list">
-              <li class="join__box"> 
-                <a class="join__svg" href="https://www.instagram.com/" aria-label="Instagram">
-                  <svg class="join__icon" width="20" height="20">
-                    <use href="./images/images.svg#icon-instagram2"></use>
-                    </svg>
+            <span class="footer-logo__accent">Web</span>Studio</a
+          >
+          <address>
+            <ul class="address">
+              <li class="address__item">
+                <a
+                  class="address__map"
+                  href="https://goo.gl/maps/UXHaqJRbuejxWk5PA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
-              <li class="join__box">
-                <a class="join__svg" href="https://twitter.com/?lang=uk" aria-label="Twitter">
-                  <svg class="join__icon" width="20" height="20">
-                    <use href="./images/images.svg#icon-twitter1"></use>
-                  </svg>
-                </a>
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__cont"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="join__box">
-                <a class="join__svg" href="https://www.facebook.com/" aria-label="Twitter">
-                  <svg class="join__icon" width="20" height="20">
-                    <use href="./images/images.svg#icon-facebook1"></use>
-                  </svg>
-                </a>
+              <li class="6">
+                <a href="tel:+380961111111" class="address__cont"
+                  >+38(096) 111 11 11</a
+                >
               </li>
-              <li class="join__box">
-                <a class="join__svg" href="https://www.linkedin.com/" aria-label="Twitter">
-                  <svg class="join__icon" width="20" height="20">
-                    <use href="./images/images.svg#icon-linkedin1"></use>
-                  </svg>
-                </a>
-              </li>
-             </ul>
-          </div>
-          <div>
-            <form class="sign">
-          <h2 class="sign__title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h2>
-          <ul class="sign__class">
-            <li class="sign__form">
-              <label class="sign__label" for="sign-mail"></label>
-              <input class="sign__input" type="mail" id="sign-mail" placeholder="E-mail">
+            </ul>
+          </address>
+        </div>
+        <div class="join">
+          <h2 class="join__title">ПРИЄДНУЙТЕСЬ</h2>
+          <ul class="join__list">
+            <li class="join__box">
+              <a
+                class="join__svg"
+                href="https://www.instagram.com/"
+                aria-label="Instagram"
+              >
+                <svg class="join__icon" width="20" height="20">
+                  <use href="./images/images.svg#icon-instagram2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="sign__button">
-              <button class="sign__btn" type="submit">Підписатися <svg class="sign__svg" width="24px" height="24px">
-                <use href="./images/images.svg#icon-plane1-1">
-                </use>
-              </svg></button>
-              <!-- <svg class="sign-svg" width="24px" height="24px">
+            <li class="join__box">
+              <a
+                class="join__svg"
+                href="https://twitter.com/?lang=uk"
+                aria-label="Twitter"
+              >
+                <svg class="join__icon" width="20" height="20">
+                  <use href="./images/images.svg#icon-twitter1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join__box">
+              <a
+                class="join__svg"
+                href="https://www.facebook.com/"
+                aria-label="Twitter"
+              >
+                <svg class="join__icon" width="20" height="20">
+                  <use href="./images/images.svg#icon-facebook1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="join__box">
+              <a
+                class="join__svg"
+                href="https://www.linkedin.com/"
+                aria-label="Twitter"
+              >
+                <svg class="join__icon" width="20" height="20">
+                  <use href="./images/images.svg#icon-linkedin1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <form class="sign">
+            <h2 class="sign__title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h2>
+            <ul class="sign__class">
+              <li class="sign__form">
+                <label class="sign__label" for="sign-mail"></label>
+                <input
+                  class="sign__input"
+                  type="email"
+                  id="sign-mail"
+                  placeholder="E-mail"
+                />
+              </li>
+              <li class="sign__button">
+                <button class="sign__btn" type="submit">
+                  Підписатися
+                  <svg class="sign__svg" width="24px" height="24px">
+                    <use href="./images/images.svg#icon-plane1-1"></use>
+                  </svg>
+                </button>
+                <!-- <svg class="sign-svg" width="24px" height="24px">
                 <use href="./images/images.svg#icon-plane1-1">
                 </use>
               </svg> -->
-            </li>
-          </ul>
-        </form>
-      </div>
+              </li>
+            </ul>
+          </form>
         </div>
-      </address>
+      </div>
     </footer>
   </body>
 </html>
